k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tramites-omr
  labels:
    app.kubernetes.io/name: tramites-omr
    app.kubernetes.io/managed-by: kubectl
